--- a/portfolio.html
+++ b/portfolio.html
@@ -11,16 +11,16 @@
         rel="stylesheet">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/modern-normalize@1.1.0/modern-normalize.min.css">
     <link rel="stylesheet" href="./css/reset.css">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/styleS.css">
     <link rel="stylesheet" href="./css/main.min.css">
 </head>
 
 <body class="page">
     <!--========= Шапка сайту ========-->
     <header class="header">
-         <div class="header-container container">
+         <div class="container container--header">
         
-            <a  href="./index.html" class="link logo" lang="en" >Web<span class="header-studio">Studio</span></a>
+            <a  href="./index.html" class="logo" lang="en" >Web<span class="logo__studio_header">Studio</span></a>
             <nav class="navigation">
             <ul class="site-nav list">
                 <li class="site-nav-item"><a class="site-nav-link link" href="./index.html" >Студія</a></li>
