fixed bugs logo studio

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
          <header class="header">
             <div class="container container--header">
                 
-                    <a href="./index.html" lang="en" class="logo" >Web<span class="logo__studio_header">Studio</span> </a>
+                    <a href="./index.html" lang="en" class="logo">Web<span class="logo__studio-header">Studio</span> </a>
                     <nav class="navigation">
                     <ul class="site-nav">
                     <li class="site-nav__item"><a class="site-nav__link site-nav__link--current" href=""> Студія</a> </li>
