--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,7 @@
     <header class="header">
          <div class="container container--header">
         
-            <a  href="./index.html" class="logo" lang="en" >Web<span class="logo__studio_header">Studio</span></a>
+            <a  href="./index.html" class="logo" lang="en" >Web<span class="logo__studio-header">Studio</span></a>
             <nav>
             <ul class="site-nav">
                 <li class="site-nav__item"><a class="site-nav__link" href="./index.html" >Студія</a></li>
