--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
          <footer>
             <div class="container container--footer">
                  <div class="footer__block">
-            <a href="./index.html" lang="en" class="logo">Web<span class="logo__studio_footer">Studio</span></a>
+            <a href="./index.html" lang="en" class="logo">Web<span class="logo__studio-footer">Studio</span></a>
             <address class="address">
             <ul class="address__list">
                 <li class="address__item"><a class="address__map" href="https://goo.gl/maps/Gebt9AiKVz2ZTQdTA" target="_blank">м. Київ, пр-т Лесі Українки, 26</a></li>
