--- a/portfolio.html
+++ b/portfolio.html
@@ -233,7 +233,7 @@
     <footer>
         <div class="container container--footer">
             <div class="footer__block">
-        <a class="logo" href="./index.html" lang="en" >Web<span class="logo__studio_footer">Studio</span></a>
+        <a class="logo" href="./index.html" lang="en" >Web<span class="logo__studio-footer">Studio</span></a>
         <address class="address">
             <ul class="address__list">
                 <li class="address__item"><a class="address__map" href="https://goo.gl/maps/fksLgXk4oVLqper47" >м. Київ, пр-т Лесі Українки, 26</a></li>
