fixed bugs footer

--- a/portfolio.html
+++ b/portfolio.html
@@ -232,7 +232,7 @@
 <!--=========== підвал сайту(FOOTER) ===============-->
     <footer>
         <div class="container container--footer">
-            <div class="footer__block">
+            <div class="footer-block">
         <a class="logo" href="./index.html" lang="en" >Web<span class="logo__studio-footer">Studio</span></a>
         <address class="address">
             <ul class="address__list">
@@ -242,8 +242,8 @@
             </ul>
         </address>
          </div>
-            <div class="footer__block">
-                <h3 class="footer__subtitle">приєднуйтесь</h3>
+            <div class="footer-block">
+                <h3 class="footer-block__subtitle">приєднуйтесь</h3>
                 <ul class="socials">
                     <li class="socials__item">
                         <a href="" class="socials__link">
@@ -275,8 +275,8 @@
                     </li>
                 </ul>
             </div>
-                        <div class="footer__block">
-                <h3 class="footer__subtitle">Підпишіться на розсилку</h3>
+                        <div class="footer-block">
+                <h3 class="footer-block__subtitle">Підпишіться на розсилку</h3>
                 <form class="subscriprion__form" autocomplete="off">
                     <div class="subscriprion__email">
                         <input type="email"
