--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
          <!--=======================Підвал(FOOTER)====================-->
          <footer>
             <div class="container container--footer">
-                 <div class="footer__block">
+                 <div class="footer-block">
             <a href="./index.html" lang="en" class="logo">Web<span class="logo__studio-footer">Studio</span></a>
             <address class="address">
             <ul class="address__list">
@@ -340,8 +340,8 @@
             </ul>
             </address>
         </div>
-         <div class="footer__block">
-                <h3 class="footer__subtitle">приєднуйтесь</h3>
+         <div class="footer-block">
+                <h3 class="footer-block__subtitle">приєднуйтесь</h3>
                 <ul class="socials">
                     <li class="socials__item">
                         <a href="" class="socials__link">
@@ -373,8 +373,8 @@
                     </li>
                 </ul>
             </div>
-            <div class="footer__block">
-                <h3 class="footer__subtitle">Підпишіться на розсилку</h3>
+            <div class="footer-block">
+                <h3 class="footer-block__subtitle">Підпишіться на розсилку</h3>
                 <form class="subscriprion__form" autocomplete="off">
                     <div class="subscriprion__email">
                         <input
