fixed bugs sub-button

--- a/index.html
+++ b/index.html
@@ -375,11 +375,11 @@
             </div>
             <div class="footer-block">
                 <h3 class="footer-block__subtitle">Підпишіться на розсилку</h3>
-                <form class="subscriprion__form" autocomplete="off">
-                    <div class="subscriprion__email">
+                <form class="subscriprion-form" autocomplete="off">
+                    <div class="subscriprion-form__email">
                         <input
                             type="email" 
-                            class="subscriprion__input" 
+                            class="subscriprion-form__input" 
                             name="email"
                             id="email"
                             placeholder="E-mail"
@@ -387,12 +387,12 @@
                             title="Приклад правильної адреси електронної пошти: email@mail.com"
                             required
                         >
-                        <label for="email" class="subscriprion__label visually-hidden">E-mail</label>
+                        <label for="email" class="subscriprion-form__label visually-hidden">E-mail</label>
                     </div>
-                    <button type="submit" class="subscription__button">
-                        <b class="subscription__data">
+                    <button type="submit" class="subscription-button">
+                        <b class="subscription-button__data">
                             Підписатися
-                            <svg class="subscription__icon" width="24" height="24">
+                            <svg class="subscription-button__icon" width="24" height="24">
                                 <use href="./images/icons/icons.svg#icon-send"></use>
                             </svg>
                         </b>
