--- a/index.html
+++ b/index.html
@@ -405,8 +405,8 @@
 <!--=-============= модальнe вікно======== -->
     <div class="backdrop is-hidden" data-modal>
         <div class="modal">
-            <button type="button" class="close__button" data-modal-close>
-                <svg class="close__icon" width="18" height="18">
+            <button type="button" class="close-button" data-modal-close>
+                <svg class="close-button__icon" width="18" height="18">
                     <use href="./images/icons/icons.svg#icon-close"></use>
                 </svg>
             </button>
@@ -476,7 +476,7 @@
                         <svg class="modal__checkbox__icon" width="16" height="15">
                             <use href="./images/icons/icons.svg#icon-checkbox"></use>
                         </svg>
-                        <b lang="uk">Погоджуюся з розсилкою та приймаю <a href="" class="agreement__link">Умови договору</a></b>
+                        <b lang="uk">Погоджуюся з розсилкою та приймаю <a href="" class="agreement-link">Умови договору</a></b>
                     </label>                   
                 </div>
                 <button type="submit" class="modal__button">
